Accept a given visit booking method
